fix header and overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  /* overflow: hidden; */
 }
 
 .topnav {
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #f1f1f1;
 }
 
